[Blob] Better error reporting and histograms.

The UMA for renderer crashes due to invalid blob messages
is rather high. I'm adding better error reporting to figure
out the issue.

BUG=602443

Review URL: https://codereview.chromium.org/1875223002

Cr-Commit-Position: refs/heads/master@{#386754}

Former-commit-id: 907439e58214fcdf4759296655ce650ad4f0eb86